@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.1433
+//      
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -207,7 +207,6 @@ namespace CBinding {
             w16.Add(w17);
             // Container child GtkHBox.Gtk.Container+ContainerChild
             Gtk.Label w19 = new Gtk.Label();
-            w19.LabelProp = "";
             w16.Add(w19);
             w15.Add(w16);
             this.removeButton.Add(w15);
